--- a/AutoFishingBot/manifest.json
+++ b/AutoFishingBot/manifest.json
@@ -2,7 +2,7 @@
   "Name": "Auto Fishing Bot",
   "Author": "FishBotSV",
   "Version": "1.0.0",
-  "Description": "Автоматическая рыбалка в Stardew Valley. Нажмите ':' для активации/деактивации.",
+  "Description": "Automatic fishing in Stardew Valley. Press ':' to toggle on/off.",
   "UniqueID": "FishBotSV.AutoFishing",
   "EntryDll": "FishBotSV.dll",
   "MinimumApiVersion": "3.0.0",
